syntax = "proto3";
package keyResult;

service KeyResultService {
  rpc GetProgressHistory (ProgressHistoryRequest) returns (ProgressHistoryResponse);
}

message ProgressHistoryRequest {
  string keyResultId = 1;
}

message ProgressHistoryResponse {
  repeated ProgressRecord history = 1;
}

message ProgressRecord {
  string id = 1;
  float progress = 2;
  int64 timestamp = 3;
}